# mvn-rs

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
migrations/: 20240217203229_init.down.sql  20240217203229_init.up.sql  20240330130821_permission_for_artifact_access.down.sql  20240330130821_permission_for_artifact_access.up.sql  20240407100027_remove_credentials.up.sql
src/: build.rs  config.rs  coordinates.rs  file_service.rs  main.rs  route.rs
src/authentication/: artifact_authenticator.rs  authenticator.rs  mod.rs
src/model/: maven.rs  mod.rs
src/repository/: maven.rs
src/repository/maven/: artifact_repository.rs  mod.rs  version_repository.rs
