[package]
name = "mvn-rs"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", default-features = false, features = ["macros"] }
actix-web-httpauth = { version = "0.8.1", default-features = false }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "mysql", "migrate", "macros"] }
dotenv = { version = "0.15.0", default-features = false }
jwt = { version = "0.16.0", default-features = false }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
argon2 = { version = "0.5.3", default-features = false, features = ["password-hash", "alloc"] }
uuid = { version = "1.7.0", default-features = false, features = ["v4"] }
regex = "1.10.3"

[build-dependencies]
sqlx = { version = "0.7.3", default-features = false, features = ["mysql", "migrate", "macros"] }
dotenv = { version = "0.15.0", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
